Configure ant to bundle log4j and bcel into the JPSX jar file. No more classpath shenanigans!

--- a/build.xml
+++ b/build.xml
@@ -13,36 +13,36 @@
         <property name="bcel.sourcepath" value="${basedir}/external/bcel-5.1" />
         <property name="bcel.classpath" value="${bcel.sourcepath}/bin/bcel.jar" />
         <property name="log4j.classpath" value="${basedir}/external/log4j-1.2.13.jar" />
-        
+
         <target name="all" depends="api_build,bootstrap_build,runtime_build"/>
-        
+
         <target name="env">
         </target>
-        
+
         <target name="clean" depends="env">
                 <delete includeEmptyDirs="true" quiet="true">
                         <fileset dir="${classes}"/>
                 </delete>
         </target>
-        
+
         <target name="dirs">
                 <mkdir dir="${classes}"/>
                 <mkdir dir="${bootstrap.classes}"/>
                 <mkdir dir="${runtime.classes}"/>
                 <mkdir dir="${api.classes}"/>
         </target>
-        
-	<target name="package">
-		<jar jarfile="${basedir}/ship/jpsx.jar">
+
+        <target name="package">
+        		    <jar jarfile="${basedir}/ship/jpsx.jar">
                         <fileset dir="${bootstrap.classes}"/>
                         <fileset dir="${runtime.classes}"/>
                         <fileset dir="${api.classes}"/>
-		<manifest>
-			<attribute name="Main-Class" value="org.jpsx.bootstrap.JPSXLauncher"/>
-			<attribute name="Class-Path" value="bcel-5.1.jar log4j-1.2.13.jar"/>
-		</manifest>
-		</jar>
-	</target>
+                        <zipgroupfileset dir="external" includes="bcel-5.1/lib/bcel.jar log4j-1.2.13.jar"/>
+                    		<manifest>
+                    			<attribute name="Main-Class" value="org.jpsx.bootstrap.JPSXLauncher"/>
+                    		</manifest>
+            		</jar>
+        </target>
 
         <target name="bcel_build">
                 <ant antfile="build.xml" dir="${bcel.sourcepath}" target="jar" inheritAll="false" />
@@ -53,25 +53,25 @@
                         <classpath>
                                 <pathelement path="${bcel.classpath}"/>
 				<pathelement path="${log4j.classpath}"/>
-                        </classpath>                                
+                        </classpath>
                         <src path="${api.src}"/>
                         <!--<include name="org/jpsx/api/**"/>-->
                 </javac>
         </target>
-        
+
         <target name="bootstrap_build" depends="api_build,env,dirs,bcel_build">
                 <javac source="1.5" destdir="${bootstrap.classes}" debug="on">
                         <classpath>
                                 <pathelement path="${bcel.classpath}"/>
 				<pathelement path="${log4j.classpath}"/>
                                 <pathelement path="${api.classes}"/>
-                        </classpath>                                
+                        </classpath>
                         <src path="${bootstrap.src}"/>
                         <!--<include name="org/jpsx/bootstrap/**"/>-->
                 </javac>
         </target>
 
-        
+
         <target name="runtime_build" depends="api_build,bootstrap_build,env,dirs,bcel_build">
                 <javac source="1.5" destdir="${runtime.classes}" debug="on">
                         <classpath>
@@ -79,14 +79,14 @@
 				<pathelement path="${log4j.classpath}"/>
                                 <pathelement path="${api.classes}"/>
                                 <pathelement path="${bootstrap.classes}"/>
-                        </classpath>                                
+                        </classpath>
                         <src path="${runtime.src}"/>
                         <!--<include name="org/jpsx/runtime/**"/>-->
                 </javac>
                 <delete>
                         <fileset dir="${runtime.classes}">
                                 <include name="org/jpsx/runtime/components/hardware/gpu/GPU$$_*.class"/>
-                        </fileset>                
+                        </fileset>
                 </delete>
         </target>
 </project>
