--- a/build.xml
+++ b/build.xml
@@ -14,7 +14,7 @@
         <property name="bcel.classpath" value="${bcel.sourcepath}/bin/bcel.jar" />
         <property name="log4j.classpath" value="${basedir}/external/log4j-1.2.13.jar" />
 
-        <target name="all" depends="api_build,bootstrap_build,runtime_build"/>
+        <target name="all" depends="api_build,bootstrap_build,runtime_build,package"/>
 
         <target name="env">
         </target>
@@ -33,15 +33,15 @@
         </target>
 
         <target name="package">
-        		    <jar jarfile="${basedir}/ship/jpsx.jar">
+                <jar destfile="${basedir}/ship/jpsx.jar">
                         <fileset dir="${bootstrap.classes}"/>
                         <fileset dir="${runtime.classes}"/>
                         <fileset dir="${api.classes}"/>
                         <zipgroupfileset dir="external" includes="bcel-5.1/lib/bcel.jar log4j-1.2.13.jar"/>
-                    		<manifest>
-                    			<attribute name="Main-Class" value="org.jpsx.bootstrap.JPSXLauncher"/>
-                    		</manifest>
-            		</jar>
+                        <manifest>
+                                <attribute name="Main-Class" value="org.jpsx.bootstrap.JPSXLauncher"/>
+                        </manifest>
+                </jar>
         </target>
 
         <target name="bcel_build">
@@ -52,7 +52,7 @@
                 <javac source="1.5" destdir="${api.classes}" debug="on">
                         <classpath>
                                 <pathelement path="${bcel.classpath}"/>
-				<pathelement path="${log4j.classpath}"/>
+                                <pathelement path="${log4j.classpath}"/>
                         </classpath>
                         <src path="${api.src}"/>
                         <!--<include name="org/jpsx/api/**"/>-->
@@ -63,7 +63,7 @@
                 <javac source="1.5" destdir="${bootstrap.classes}" debug="on">
                         <classpath>
                                 <pathelement path="${bcel.classpath}"/>
-				<pathelement path="${log4j.classpath}"/>
+                                <pathelement path="${log4j.classpath}"/>
                                 <pathelement path="${api.classes}"/>
                         </classpath>
                         <src path="${bootstrap.src}"/>
@@ -76,7 +76,7 @@
                 <javac source="1.5" destdir="${runtime.classes}" debug="on">
                         <classpath>
                                 <pathelement path="${bcel.classpath}"/>
-				<pathelement path="${log4j.classpath}"/>
+                                <pathelement path="${log4j.classpath}"/>
                                 <pathelement path="${api.classes}"/>
                                 <pathelement path="${bootstrap.classes}"/>
                         </classpath>
