Wow... very old bug

--- a/log4j.properties
+++ b/log4j.properties
@@ -1,6 +1,6 @@
 log4j.rootLogger=INFO,console,file 
 #log4j.rootLogger=INFO,file 
-# turn off printf with WARN
+# turn off printf with WARN; comment the next line to see native printf !!
 log4j.logger.PRINTF=WARN
 #log4j.logger.SPU=DEBUG
 #log4j.logger.Scheduler=TRACE
