--- a/log4j.properties
+++ b/log4j.properties
@@ -11,6 +11,7 @@ log4j.logger.PRINTF=WARN
 log4j.logger.AddressSpace.unknown=WARN
 #log4j.logger.Cache=DEBUG
 #log4j.logger.Compiler=DEBUG
+#log4j.logger.Stage1=DEBUG
 
 log4j.appender.console=org.apache.log4j.ConsoleAppender
 log4j.appender.console.layout=org.apache.log4j.PatternLayout
